--- a/Css/style.css
+++ b/Css/style.css
@@ -493,6 +493,10 @@ width: 100%;
 /*----------------------
  All group site start 
  -----------------------*/
+ #All-group-button{
+  background-color:rgba(235, 9, 9, 0.914);
+  color: #fff;  
+}
  .group{
   border: 1px solid rgba(171, 169, 169, 0.166);
   width: 310px;
@@ -565,6 +569,6 @@ margin-right: auto;
   width: 100%;
   }
   
-  
+
 
  }
