--- a/Css/style.css
+++ b/Css/style.css
@@ -257,15 +257,15 @@ margin-top: 20px;
 
   @media only screen and (max-width:576px) {
     .banner-items{
-      width: 100%;
+      width: 90%;
       height: 90vh;      
       display: flex;
       flex-direction: column;          
       justify-content: center;
-      margin-top: 0;                 
+      margin-top: 30px;                 
     }    
     .banner-deatails{
-      width:90%; 
+      width:100%; 
       padding: 20px;
       text-align: center; 
       margin-left: auto;   
