--- a/Css/style.css
+++ b/Css/style.css
@@ -360,7 +360,7 @@ margin-top: 20px;
     }
     .blog-nav{       
       width: 100%;      
-      background-color: #ffffff;      
+      background: #FFF;     
    }  
    .blog-nav a{
     display: flex;
@@ -441,7 +441,7 @@ margin-top: 20px;
   width: 100%;
   height: 150px;
   display: flex;
-  background-color: #fff;
+  background: #fff;
   align-items: center;
   justify-content: center;
 }
